--- a/module/css/layuiTableColumnSelect.css
+++ b/module/css/layuiTableColumnSelect.css
@@ -1,88 +1,12 @@
-.layui-table-select-div-chrome-up{
-    position: absolute;
-    left: 0;
-    top: auto;
-    padding: 5px 0;
-    z-index: 899;
-    min-width: 100%;
-    border: 1px solid #d2d2d2;
-    max-height: 300px;
-    overflow-y: auto;
+.layui-table-select-div{
+    position: relative;
+    margin:0;
     background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px rgba(0,0,0,.12);
-    box-sizing: border-box;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    bottom: 24px;
-}
-
-.layui-table-select-div-chrome-down{
-    position: absolute;
-    left: 0;
-    top: 24px;
-    padding: 5px 0;
-    z-index: 899;
-    min-width: 100%;
+    font: 14px Helvetica Neue,Helvetica,PingFang SC,Tahoma,Arial,sans-serif;
     border: 1px solid #d2d2d2;
-    max-height: 300px;
     overflow-y: auto;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px rgba(0,0,0,.12);
-    box-sizing: border-box;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-.layui-table-select-dd-this{
-    background-color:#5FB878;
-    color: #fff;
-}
-
-.layui-table-select-div-ie-up{
-    position: absolute;
-    left: 0;
-    top: auto;
+    max-height: 290px;
     padding: 5px 0;
-    z-index: 899;
-    min-width: 100%;
-    border: 1px solid #d2d2d2;
-    max-height: 300px;
-    overflow-y: auto;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px rgba(0,0,0,.12);
-    box-sizing: border-box;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    bottom: 36px;
-}
-
-.layui-table-select-div-ie-down{
-    position: absolute;
-    left: 0;
-    top: 38px;
-    padding: 5px 0;
-    z-index: 899;
-    min-width: 100%;
-    border: 1px solid #d2d2d2;
-    max-height: 300px;
-    overflow-y: auto;
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px rgba(0,0,0,.12);
-    box-sizing: border-box;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
 }
 
 .layui-table-select-dd{
