--- a/module/css/layuiTableColumnSelect.css
+++ b/module/css/layuiTableColumnSelect.css
@@ -35,3 +35,18 @@
     border-style: dashed;
     border-color: transparent;
 }
+
+.layui-table-select-input{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0 14px 1px;
+    border-radius: 0;
+    box-shadow: 1px 1px 20px rgba(0,0,0,.15)
+}
+
+.layui-table-select-input:focus{
+    border-color: #5FB878!important;
+}
