--- a/layui/css/layui.css
+++ b/layui/css/layui.css
@@ -1434,6 +1434,11 @@ body .layui-util-face  .layui-layer-content{padding:0; background-color:#fff; co
   border-color: transparent;
 }
 
+.layui-edge-transform{
+  transform:rotate(180deg);
+  transition: all .3s;
+}
+
 .layui-table-select-input{
   position: absolute;
   left: 0;
